# localargo

./: .gitignore  LICENSE  README.md  clusters.yaml  mise.toml  pyproject.toml
.localargo/: state.json
docs/: README.md  book.toml
docs/src/: SUMMARY.md  contributing.md  installation.md  introduction.md  testing.md  usage.md  usage_eye_candy.md
examples/nginx/: Chart.yaml  app.yaml  localargo.yaml  values.yaml
examples/nginx/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
src/localargo/: __about__.py  __init__.py  __main__.py  logging.py  manager.py
src/localargo/cli/: __init__.py
src/localargo/cli/commands/: __init__.py  app.py  cluster.py  debug.py  port_forward.py  secrets.py  sync.py  template.py  up.py
src/localargo/config/: __init__.py  manifest.py  store.py
src/localargo/core/: __init__.py  apps.py  argocd.py  catalog.py  checkers.py  cluster.py  execution.py  executors.py  k8s.py  types.py
src/localargo/eyecandy/: __init__.py  progress_steps.py  step_logger.py  table_renderer.py  tables.py
src/localargo/providers/: __init__.py  base.py  k3s.py  kind.py  registry.py
src/localargo/utils/: __init__.py  cli.py  proc.py  retry.py
tests/: conftest.py  test_utils.py
tests/unit/: test_argocd_facade.py  test_catalog_loader.py  test_cli_cluster.py  test_cli_eye_candy.py  test_cli_up_idempotent.py  test_cluster_manager.py  test_config_store.py  test_execution_engine.py  test_k3s_provider.py  test_k8s_helpers.py  test_kind_provider.py  test_manifest_loader.py  test_progress_steps.py  test_provider_registry.py  test_state_checkers.py  test_state_tracking.py  test_table_renderer.py
