[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localargo"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/U.N. Owen/localargo#readme"
Issues = "https://github.com/U.N. Owen/localargo/issues"
Source = "https://github.com/U.N. Owen/localargo"

[project.scripts]
localargo = "localargo.cli:localargo"

[tool.hatch.version]
path = "src/localargo/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/localargo tests}"

[tool.coverage.run]
source_pkgs = ["localargo", "tests"]
branch = true
parallel = true
omit = [
  "src/localargo/__about__.py",
]

[tool.coverage.paths]
localargo = ["src/localargo", "*/localargo/src/localargo"]
tests = ["tests", "*/localargo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
